2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* Makefile.in: Add mising backslash, remove potentially
	unportable construct.

2013-06-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/graph/view3D/process3d.c:	 Turn on outline after
	graphic reset.

2013-06-20  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/view3D.spad.pamphlet: Change default style
	of 3D graphics.

2013-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet,
	src/algebra/mrv_limit.spad.pamphlet: Better zero test
	during limit computation.

2013-06-19  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/scwrap2.boot: Report scanning errors
	during compilation.

2013-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/elemntry.spad.pamphlet: Change formula
	for derivatives of asec, asech, acsc and acsch.

2013-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/integrat.spad.pamphlet,
	src/algebra/curve.spad.pamphlet,
	src/algebra/intef.spad.pamphlet: Better handling
	of algebraic integrals.

2013-06-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad.pamphlet,
	src/algebra/expr.spad.pamphlet: Generalize 'kernels'
	and 'tower'.

2013-06-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/graph/viewAlone/spoon2D.c: Fix another problem with
	r1557.

2013-06-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/graph/viewAlone/spoonComp.c: Fix problem with
	last commit.

2013-06-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/include/strutil.h: Safer alternative to 'sprintf'.
	src/graph/include/G.h: Enlarge buffer.
	*/*.c: Use it.

2013-06-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/integrat.spad.pamphlet: Do not signal
	errors on complex integration result.

2013-05-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/rdeefx.spad.pamphlet: Fix trivial case in
	Ei code.

2013-05-28  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
