@@ -237,7 +237,7 @@ makePredicateBitVector pl ==   --called by buildFunctor
 augmentPredCode(n,lastPl) ==
   ['LIST,:pl] := mungeAddGensyms(lastPl,$predGensymAlist)
   delta := 2^n
-  l := [(u := MKPF([x,['augmentPredVector,$,delta]],'AND);
+  l := [(u := MKPF([x, ['augmentPredVector, '$, delta]], 'AND);
          delta:=2 * delta; u) for x in pl]
 
 augmentPredVector(dollar,value) ==
