@@ -1,5 +1,11 @@
 2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/define.boot, src/interp/nrunopt.boot,
+	src/interp/spad.lisp, src/interp/util.lisp:  Bind '$'
+	only during evaluation of categories.
+
+2013-06-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* Makefile.in: Add mising backslash, remove potentially
 	unportable construct.
 
